Uso della navbar bianca

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
  <head>   
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-  <div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
@@ -67,7 +67,7 @@
   {% endblock %}
   {% block footer %}
   <div class="container well">
-	<h2><center>Frase figa da effetto XD tipo SIAMO SEMPRE PRESENTI</center></h2>
+	<h2><center>Le vostre vacanze a portata di click</center></h2>
   </div>
 	<div id="footer" style="background-image: url(/media/foot.jpeg);  height: 280px;">
     	<div class="container">
