Corrette alcune views. Domenica/Lunedi controllo anche le mancanti

--- a/portal/templates/portal/upload.html
+++ b/portal/templates/portal/upload.html
@@ -19,7 +19,7 @@
         	{% bootstrap_button "Ok" button_type="submit" name="Ok" button_class="btn-primary" icon="ok" %}
         	</div>
 </form>
-<a href="{% url 'portal:portal_welcome' %}">{% bootstrap_button "Cancel" button_type="link" name="Cancel" button_class="btn-default" icon="remove" %}</a>
+<a href="{% url 'portal:personal' %}">{% bootstrap_button "Cancel" button_type="link" name="Cancel" button_class="btn-default" icon="remove" %}</a>
 </div>
 
 {% endblock %}
