--- a/review/templates/review/reviewlist.html
+++ b/review/templates/review/reviewlist.html
@@ -11,7 +11,32 @@ Average Rate: {{ average }}<br>
 <ul>
 {% for review in review_list %}
     <li>{{ review.user.username }} - {{ review.created|date }}<br>
-    	{{ review.rate }}<br>
+    	{% ifequal review.rate 1 %}
+    	<span class="glyphicon glyphicon-star"></span>
+    	{% endifequal %}
+    	{% ifequal review.rate 2 %}
+    	<span class="glyphicon glyphicon-star"></span>
+    	<span class="glyphicon glyphicon-star"></span>
+    	{% endifequal %}
+    	{% ifequal review.rate 3 %}
+    	<span class="glyphicon glyphicon-star"></span>
+    	<span class="glyphicon glyphicon-star"></span>
+    	<span class="glyphicon glyphicon-star"></span>
+    	{% endifequal %}
+    	{% ifequal review.rate 4 %}
+    	<span class="glyphicon glyphicon-star"></span>
+    	<span class="glyphicon glyphicon-star"></span>
+    	<span class="glyphicon glyphicon-star"></span>
+    	<span class="glyphicon glyphicon-star"></span>
+    	{% endifequal %}
+    	{% ifequal review.rate 5 %}
+    	<span class="glyphicon glyphicon-star"></span>
+    	<span class="glyphicon glyphicon-star"></span>
+    	<span class="glyphicon glyphicon-star"></span>
+    	<span class="glyphicon glyphicon-star"></span>
+    	<span class="glyphicon glyphicon-star"></span>
+    	{% endifequal %}
+    	<br>
     	{{ review.comment }}<br>
     </li>
 {% empty %}
