corrette dimensioni hotel

--- a/hotels/templates/hotels/hotel_detail.html
+++ b/hotels/templates/hotels/hotel_detail.html
@@ -21,7 +21,7 @@
           <div class="col-md-4">
             <br>
             <br>
-            <img src="{{ hotel.image.url }}" alt="Hotel View" style="width:300px;height:230px;" class="img-responsive">
+            <img src="{{ hotel.image.url }}" alt="Hotel View" style="width:100%;" class="img-responsive">
           </div>
           <div class="col-md-8 text-center">
             <p> <br><br><br>
