static files in DEBUG del template BASE

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="/" class="navbar-brand"><img src="/media/vm.png" class="center-block img-circle" height="33" alt="VMhotels"></a>
+          <a href="/" class="navbar-brand"><img src="{% static 'images/vm.png' %}" class="center-block img-circle" height="33" alt="VMhotels"></a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-ex-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -70,7 +70,7 @@
   <div class="container well">
 	<h2><center>Le vostre vacanze a portata di click</center></h2>
   </div>
-	<div id="footer" style="background-image: url(/media/foot.jpeg);  height: 280px;">
+	<div id="footer" style="background-image: url({% static 'images/foot.jpeg' %});  height: 280px;">
     	<div class="container">
        	 <div class="row">
             	<h3 class="footertext">About Us:</h3>
