--- a/portal/templates/portal/portal.html
+++ b/portal/templates/portal/portal.html
@@ -19,7 +19,7 @@ This is the main template for all portal pages.
             <br>
             <br>
             <br>
-            <img src="/media/info.png" class="center-block img-responsive" width="400">
+            <img src="{% static 'images/info.png' %}" class="center-block img-responsive" width="400">
             <p></p>
             <p></p>
           </div>
