--- a/portal/templates/portal/portal.html
+++ b/portal/templates/portal/portal.html
@@ -5,6 +5,7 @@ This is the main template for all portal pages.
 
 {% block head %}
 	<title>VMhotels | {% block title %}{% endblock %}</title>
+	{% load staticfiles %}
 {% endblock %}
 
 {% block body %}
