static template index

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,10 @@
 {% block bar %}
 {% endblock %}
 
+{% load staticfiles %}
+
 {% block cover %}
- <div class="cover" style="background-image: url(/media/login.jpg);  width: 100%; height:800px; background-repeat: no-repeat; margin: 0; padding: 0; background-size: 100% 100%;">
+ <div class="cover" style="background-image: url({% static 'images/login.jpg' %});  width: 100%; height:800px; background-repeat: no-repeat; margin: 0; padding: 0; background-size: 100% 100%;">
 {% block covercontent %}
     <table align="center">
  	 <tr>
