--- a/portal/templates/portal/personal.html
+++ b/portal/templates/portal/personal.html
@@ -1,12 +1,16 @@
 {% extends "portal/portal.html" %}
 {% load bootstrap3 %}
 
-{% block body %}
+{% block covercontent %}
+<br><br><br><br><br><br>
+<div style="background: white; width: 80%; height: 500px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
 <h1 align="center">Personal Page of {{ request.user }}</h1>
 <br>
 <div align="center">
 {% if owner %}
 <h2>Hotels:</h2>
+<div class="pre-scrollable" style="height:100px;">
+
 <ul>
 {% for h in hotel_list %}
 	<li><a href="{% url 'hotels:hotel_detail' h.pk %}">{{ h.name }}</a>
@@ -14,9 +18,13 @@
 	<li>No Hotels yet.</li>
 {% endfor %}
 </ul>
+
+</div>
 {% endif %}
 {% if customer %}
 <h2>Reservations:</h2>
+<div class="pre-scrollable" style="height:100px;">
+
 <ul>
 {% for r in reservation_list %}
 	<li><a href="{% url 'reservation:reservation_detail' r.pk %}">Reservation</a> First Name: {{ r.firstname }}  Last Name: {{ r.lastname }} -
@@ -28,8 +36,10 @@
 	<li>No reservation yet.</li>
 {% endfor %}
 </ul>
+
+</div>
 {% endif %}
-<br><br>
+<br><br><br><br><br><br><br><br><br>
 {% if owner %}
 <a href="{% url 'hotels:create_hotel' %}">{% bootstrap_button "Add Hotel" button_type="link" name="AddHotel" button_class="btn-success" %}</a>
 <a href="{% url 'portal:update_data' %}">{% bootstrap_button "Edit Personal Data" button_type="link" name="EditUser" button_class="btn-success" %}</a>
@@ -39,4 +49,7 @@ AGGIUNGERE ROBA QUI
 {% endif %}
 <a href="{% url 'portal:logout_view' %}">{% bootstrap_button "Logout" button_type="link" name="Logout" button_class="btn-danger" %}</a>
 </div>
+</div>
+{% endblock %}
+{% block body %}
 {% endblock %}
