Passare i servizi alla ricerca VENTU GUARDA QUA ho un errore

--- a/templates/search.html
+++ b/templates/search.html
@@ -31,6 +31,12 @@
         		Max Price for {{ days }} nights: {{ max_cost }}<br>
         	{% endwith %}
         	{% endwith %}
+        	Available Services: 
+        	<ul>
+        	{% for service in s[h] %}
+        		<li>{{ service.name }}</li>
+        	{% endfor %}
+        	</ul>
     		{% empty %}
     			No Results Found.
     		{% endfor %}	
