--- a/portal/templates/portal/personal.html
+++ b/portal/templates/portal/personal.html
@@ -3,7 +3,7 @@
 
 {% block covercontent %}
 <br><br><br><br><br><br>
-<div style="background: white; width: 80%; height: 500px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
+<div style="background: rgba(255,255,255, 0.7); width: 80%; height: 500px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
 <h1 align="center">Personal Page of {{ request.user }}</h1>
 <br>
 <div align="center">
