--- a/hotels/templates/hotels/editroom.html
+++ b/hotels/templates/hotels/editroom.html
@@ -4,11 +4,14 @@
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 
+{% load staticfiles %}
+
 {% bootstrap_messages %}
-
-
+{% block cover %}
+<div class="cover" style="background-image: url({% static 'images/editr.jpg' %});  width: 100%; height:800px; background-repeat: no-repeat; margin: 0; padding: 0; background-size: 100% 100%;">
 {% block covercontent %}
 <br><br><br><br>
+	<div style="background: rgba(255,255,255, 0.8); width: 80%; height: 665px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
 		<h1 align="center">Hotel {{ hotel.name }} | Editing Room {{ room.number }}</h1>
 		<br><br><br><br>
 		<div class="col-xs-10" align="center">
@@ -22,6 +25,9 @@
 		</form>
 		<a href="{% url 'hotels:room_detail' hotel.pk room.pk %}">{% bootstrap_button "Cancel" button_type="link" name="Cancel" button_class="btn-default" icon="remove" %}</a>
 		</div>
+	</div>
+
+{% endblock %}
 
 {% endblock %}
 
