--- a/hotels/templates/hotels/room_detail.html
+++ b/hotels/templates/hotels/room_detail.html
@@ -8,7 +8,7 @@
 {% endif %}
 {% block covercontent %}
 <br><br><br><br><br><br><br>
-  	<div style="background: white; width: 80%; height: 500px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
+  	<div style="background: rgba(255,255,255, 0.8); width: 80%; height: 500px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
 <header>
 <h1>Camera {{ room.number }}</h1>
 </header>
