--- a/hotels/templates/hotels/inserthotel.html
+++ b/hotels/templates/hotels/inserthotel.html
@@ -1,16 +1,24 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
+{% load staticfiles %}
+
+{% bootstrap_messages %}
+{% block cover %}
+<div class="cover" style="background-image: url({% static 'images/addh.jpg' %});  width: 100%; height:800px; background-repeat: no-repeat; margin: 0; padding: 0; background-size: 100% 100%;">
 {% block covercontent %}
-<br><br><br><br><br>
+<br><br><br>
+<div style="background: rgba(255,255,255, 0.8); width: 80%; height: 700px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
 <h1 align="center">Insert Hotel data</h1>
-<br><br>
+<br>
 <div class="col-xs-10" align="center">
 <form role="form" class="form-horizontal" enctype="multipart/form-data" method="post">
 {% csrf_token %}
-{% bootstrap_form form layout="horizontal" size='md' %}
-<input type="submit" value="Create"/>
+{% bootstrap_form form layout="horizontal" size='sm' %}
+{% bootstrap_button "Ok" button_type="submit" name="Create" button_class="btn-primary" icon="ok" %}
 </form>
 </div>
+</div>
+{% endblock %}
 {% endblock %}
 {% block footer %}
 {% endblock %}
