--- a/templates/search.html
+++ b/templates/search.html
@@ -5,7 +5,7 @@
 
 {% block covercontent %}
 <br><br><br><br><br><br><br>
-<div style="background: white; width: 90%; height: 500px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
+<div style="background: rgba(255,255,255, 0.9); width: 90%; height: 500px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
 <h2>Hotels Found:</h2>
     <br><br>
     <div class="pre-scrollable" style="height:600px;">
