--- a/review/templates/review/addreview.html
+++ b/review/templates/review/addreview.html
@@ -8,6 +8,7 @@
 
 {% block covercontent %}
 <br><br><br><br><br>
+<div style="background: rgba(255,255,255, 0.8); width: 80%; height: 630px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
 <h1 align="center">Add Review for {{ hotel.name }}</h1>
 <br><br><br>
 <div class="col-xs-10" align="center">
@@ -20,6 +21,7 @@
         	</div>
 </form>
 <a href="{% url 'hotels:hotel_detail' hotel.pk%}">{% bootstrap_button "Cancel" button_type="link" name="Cancel" button_class="btn-default" icon="remove" %}</a>
+</div>
 </div>
 <br>
 
