Res detail temp

--- a/reservation/templates/reservation/reservation_detail.html
+++ b/reservation/templates/reservation/reservation_detail.html
@@ -4,7 +4,7 @@
 {% block covercontent %}
 
 <br><br><br><br><br><br><br>
-  	<div style="background: white; width: 80%; height: 500px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
+  	<div style="background: rgba(255,255,255, 0.8); width: 80%; height: 500px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
 
 <header>
 <h1>Reservation for 
