--- a/portal/templates/registration/login.html
+++ b/portal/templates/registration/login.html
@@ -7,9 +7,11 @@
 {% endblock %}
 
 {% block covercontent %}
+<br><br><br><br><br><br><br><br>
+	<div style="background: rgba(255,255,255, 0.8); width: 40%; height: 500px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
 	 <table align="center">
  	 <tr>
-    		<th>	<br><br><br><br>
+    		<th>	<br><br><br>
     			<h1 align="center">VMhotels</h1>
     			<h2 align="center">Login Page</h2>
 		</th>
@@ -43,7 +45,8 @@
  	 	</th>
  	 </tr>
 
-    </table>	
+    </table>
+    </div>	
 {% endblock %}
 {% block footer %}
 {% endblock %}
