--- a/portal/templates/registration/registration_form.html
+++ b/portal/templates/registration/registration_form.html
@@ -3,6 +3,7 @@
 
 {% block covercontent %}
 <br><br><br><br><br><br>
+<div style="background: rgba(255,255,255, 0.8); width: 80%; height: 500px; margin:0 auto; -moz-border-radius: 6px; border-radius: 6px;" align="center">
 <h1 align="center"> Register page </h1>
 <br><br><br>
 <div class="col-xs-10" align="center">
@@ -12,6 +13,7 @@
 {% bootstrap_button "Ok" button_type="submit" value="Ok" button_class="btn-primary" icon="ok" %}
 <a href="{% url 'portal:portal_welcome' %}">{% bootstrap_button "Cancel" button_type="link" name="Cancel" button_class="btn-default" icon="remove" %}</a>
 </form>
+</div>
 </div>
 {% endblock %}
 {% block body %}
