Modifica orologio navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,10 @@
               	<li> <a href="{% url 'portal:logout_view' %}"> Logout </a></li>
               {% else %}
               	<li> <a href="{% url 'portal:django.contrib.auth.views.login' %}"> Login </a></li>
-	      {% endif %}              	
+	      {% endif %} 
+	      <li><br>
+              <div id="txt"></div>
+            </li>             	
           </ul>
         </div>
       </div>
@@ -55,7 +58,7 @@
     
  </head>
  
- 
+ <body onload="startTime()">
   {% block body %}
   {% endblock %}
   {% block form %}
@@ -63,5 +66,25 @@
   {% block footer %}
  
   {% endblock %}
-  
+  <script>
+	function startTime() {
+	var today=new Date();
+	var h=today.getHours();
+	var m=today.getMinutes();
+	var s=today.getSeconds();
+	m = checkTime(m);
+	s = checkTime(s);
+	document.getElementById('txt').innerHTML = h+":"+m+":"+s;
+	var t = 
+	setTimeout(function(){startTime()},500); 
+	}
+	
+	function checkTime(i)
+ 	{
+	if (i<10) {i = "0" + i};  
+	// add a zero in front of numbers < 10
+	return i;
+	}
+</script>
+</body>
 </html>
