--- a/hotels/templates/hotels/edithotel.html
+++ b/hotels/templates/hotels/edithotel.html
@@ -17,7 +17,22 @@
 <form role="form" class="form-horizontal" enctype="multipart/form-data" method="post">
         {% csrf_token %}
         
-        	{% bootstrap_form form layout="horizontal" size='sm' %}
+        	{%  bootstrap_field form.name layout="horizontal" size='sm' %}
+        	{%  bootstrap_field form.city layout="horizontal" size='sm' %}
+        	{%  bootstrap_field form.address layout="horizontal" size='sm' %}
+        	{%  bootstrap_field form.description layout="horizontal" size='sm' %}
+        	{%  bootstrap_field form.email layout="horizontal" size='sm' %}
+        	{%  bootstrap_field form.tel layout="horizontal" size='sm' %}
+        	{%  bootstrap_field form.image layout="horizontal" size='sm' %}
+        	<p align="justify" style="margin-left:12em;"><font size="2"> <b>Services</b></font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        	{% regroup form.services by attrs.cat_name as list %}
+        	{% for el in list %}
+        	
+        		{% for e in el.list %}        		
+                			{{e}}
+                	{% endfor %}
+        	{% endfor %}
+		
         	<div class="col-md-6 text-center">
         	{% bootstrap_button "Ok" button_type="submit" name="Ok" button_class="btn-primary" icon="ok" %}
         	</div>
