--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,70 @@
 {% block bar %}
 <html>
 
- <head>   
+ <head>  
+ <SCRIPT LANGUAGE="JavaScript">
+
+	function GetCookie (name) {
+		var arg = name + "=";
+		var alen = arg.length;
+		var clen = document.cookie.length;
+		var i = 0;
+		while (i < clen) {
+			var j = i + alen;
+			if (document.cookie.substring(i, j) == arg)
+				return getCookieVal (j);
+			i = document.cookie.indexOf(" ", i) + 1;
+			if (i == 0) break;
+		}
+	return null;
+	}
+	
+	function SetCookie (name, value) {
+		var argv = SetCookie.arguments;
+		var argc = SetCookie.arguments.length;
+		var expires = (argc > 2) ? argv[2] : null;
+		var path = (argc > 3) ? argv[3] : null;
+		var domain = (argc > 4) ? argv[4] : null;
+		var secure = (argc > 5) ? argv[5] : false;
+		document.cookie = name + "=" + escape (value) + ((expires == null) ? "" : ("; expires=" + expires.toGMTString())) +
+		 ((path == null) ? "" : ("; path=" + path)) +
+		 ((domain == null) ? "" : ("; domain=" + domain)) +
+		 ((secure == true) ? "; secure" : "");
+	}	
+	
+	function DeleteCookie (name) {
+		var exp = new Date();
+		exp.setTime (exp.getTime() - 1);
+		var cval = GetCookie (name);
+		document.cookie = name + "=" + cval + "; expires=" + exp.toGMTString();
+	}
+	
+	var expDays = 30;
+	var exp = new Date();
+	exp.setTime(exp.getTime() + (expDays*24*60*60*1000));
+	
+	function amt(){
+		var count = GetCookie('count')
+		if(count == null) {
+			SetCookie('count','1')
+		return 1
+		}
+		else {
+			var newcount = parseInt(count) + 1;
+			DeleteCookie('count')
+			SetCookie('count',newcount,exp)
+			return count
+   		}
+	}
+	
+	function getCookieVal(offset) {
+		var endstr = document.cookie.indexOf (";", offset);
+		if (endstr == -1)
+			endstr = document.cookie.length;
+	return unescape(document.cookie.substring(offset, endstr));
+	}
+</SCRIPT> 
+
   {% load staticfiles %}
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
   <div class="navbar navbar-default navbar-fixed-top">
@@ -49,8 +112,11 @@
   
   
   {% block cover %}
+  
   <div class="cover" style="background-image: url({% static 'images/trav.jpg' %});  width: 100%; height:800px; background-repeat: no-repeat; margin: 0; padding: 0; background-size: 100% 100%;">
+  
   {% block covercontent %}
+  
   {% endblock %}
   </div>
   {% endblock %}
@@ -85,6 +151,8 @@
 	// add a zero in front of numbers < 10
 	return i;
 	}
+</script>
+  	
 </script>
 </body>
 </html>
