--- a/hotels/templates/hotels/hotel_detail.html
+++ b/hotels/templates/hotels/hotel_detail.html
@@ -65,6 +65,11 @@
     <span class="glyphicon glyphicon-search"></span> All Reviews
 </button>
 </a>
+<a href="{% url 'review:add_review' hotel.id %}">
+<button type="button" class="btn btn-default">
+    <span class="glyphicon glyphicon-thumbs-up"></span> Add Review
+</button>
+</a>
 {% if request.user == hotel.user %}
 <a href="{% url 'hotels:create_room' hotel.id %}">
 <button type="button" class="btn btn-default">
